--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
    ScrollReveal({ reset: true, distance: '60px', duration: 2500, delay: 300 });
 
    ScrollReveal().reveal('.card', { delay: 200, origin: 'top' });
+   ScrollReveal().reveal('.fundo', { delay: 300, origin: 'buttom' });
+   ScrollReveal().reveal('.fundo2', { delay: 600, origin: 'buttom' });
+   ScrollReveal().reveal('.fundo3', { delay: 500, origin: 'buttom' });
+
   </script>
 </body>
 </html>
