--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
    <div class="loginmain">
       <div class="card">
-         <img class="planeta" src="pngegg(1).png" >
+         <img class="planeta" src="./files/pngegg(1).png" >
          <div class="planeta2"></div>
          <div class="textlogin">
            <input type="text"  required="required">
@@ -30,7 +30,7 @@
           <a class="botao" href="https://github.com" target="_blank">&lt;LOGIN&gt;</a>
       </div>
   </div>
-  <img class="ima" src="starfall-gif-29.gif" >
+  <img class="ima" src="./files/starfall-gif-29.gif" >
   
   <div class="fundo"></div>
   <div class="fun"></div>
